Bug 1472611 - Don't link DBus 1.5.12 symbol dbus_validate_bus_name(). r=stransky, a=RyanVM

MozReview-Commit-ID: 6scVh8DOex2

--HG--
extra : source : 6ace78c3a8a582bcbe0c3d67b8fe26fe40122631
extra : intermediate-source : 9b330d91059107e972908036c1580ce98a477eb5